v1.0.0/modules/schema/pages/class/NetworkModelProjectStage.adoc
= `NetworkModelProjectStage`
:toclevels: 4



[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:NetworkModelProjectStage`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]
*** *`NetworkModelProjectStage`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
NetworkModelProjectStage {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AnnotatedProjectDependency {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AnnotatedProjectDependency {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



CurrentState {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



NetworkModelProject2 {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




NetworkModelProjectStage -> ChangeSet: ChangeSets


NetworkModelProjectStage -> AnnotatedProjectDependency: DependencyDependentOnStage


NetworkModelProjectStage -> AnnotatedProjectDependency: DenpendecyDependingStage


NetworkModelProjectStage -> CurrentState: CurrentState


NetworkModelProjectStage -> NetworkModelProject2: Parent


NetworkModelProjectStage -> DiagramObject: DiagramObjects


NetworkModelProjectStage -> InstanceSet: InstanceSet


NetworkModelProjectStage -> Name: Names


NetworkModelProjectStage -> ChangeSetMember: PropertiesCIMDataObject


NetworkModelProjectStage -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ChangeSets,`ChangeSets`>>
| 1..*
| xref::class/ChangeSet.adoc[`ChangeSet`]
| n/a

| <<CurrentState,`CurrentState`>>
| 1
| xref::class/CurrentState.adoc[`CurrentState`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<DependencyDependentOnStage,`DependencyDependentOnStage`>>
| 0..1
| xref::class/AnnotatedProjectDependency.adoc[`AnnotatedProjectDependency`]
| n/a

| <<changesetVersion,`changesetVersion`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| n/a

| <<commissionedDate,`commissionedDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| n/a

| <<plannedCommissionedDate,`plannedCommissionedDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| n/a

| <<DenpendecyDependingStage,`DenpendecyDependingStage`>>
| 0..*
| xref::class/AnnotatedProjectDependency.adoc[`AnnotatedProjectDependency`]
| n/a

| <<Parent,`Parent`>>
| 0..1
| xref::class/NetworkModelProject2.adoc[`NetworkModelProject2`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<closed,`closed`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| n/a

| <<created,`created`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| n/a

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<updated,`updated`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| n/a

| <<version,`version`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| n/a

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ChangeSets]
=== `ChangeSets`


[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectStage.ChangeSets`
| Cardinality
| 1..*
| Type
| xref::class/ChangeSet.adoc[`ChangeSet`]


|===

//[discrete]
[#changesetVersion]
=== `changesetVersion`


[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectStage.changesetVersion`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#closed]
=== `closed`


[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent2.closed`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]


|===

//[discrete]
[#commissionedDate]
=== `commissionedDate`


[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectStage.commissionedDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#created]
=== `created`


[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent2.created`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]


|===

//[discrete]
[#CurrentState]
=== `CurrentState`


[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent2.CurrentState`
| Cardinality
| 1
| Type
| xref::class/CurrentState.adoc[`CurrentState`]

| Inherited from
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]


|===

//[discrete]
[#DenpendecyDependingStage]
=== `DenpendecyDependingStage`


[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectStage.DenpendecyDependingStage`
| Cardinality
| 0..*
| Type
| xref::class/AnnotatedProjectDependency.adoc[`AnnotatedProjectDependency`]


|===

//[discrete]
[#DependencyDependentOnStage]
=== `DependencyDependentOnStage`


[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectStage.DependencyDependentOnStage`
| Cardinality
| 0..1
| Type
| xref::class/AnnotatedProjectDependency.adoc[`AnnotatedProjectDependency`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Parent]
=== `Parent`


[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent2.Parent`
| Cardinality
| 0..1
| Type
| xref::class/NetworkModelProject2.adoc[`NetworkModelProject2`]

| Inherited from
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]


|===

//[discrete]
[#plannedCommissionedDate]
=== `plannedCommissionedDate`


[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectStage.plannedCommissionedDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#updated]
=== `updated`


[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent2.updated`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]


|===

//[discrete]
[#version]
=== `version`


[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent2.version`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]


|===


